# MyImageCoder

./: CMakeLists.txt
include/: Coder.h
src/: Coder.cpp  main.cpp
